[package]
name = "party"
version = "0.1.0"
edition = "2024"
description = "P lAnguage in RusT — formal verification toolchain for distributed systems"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.9"
indexmap = "2.13.0"
log = "0.4.29"
logos = "0.16.1"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.10.0"
smol_str = "0.3.6"
thiserror = "2.0.18"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
